2005-10-13  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/text/PlainView.java:
	(updateDamage): Repaint the container if a new line is added.

2005-10-13  Lillian Angel  <langel@redhat.com>

	* javax/swing/plaf/basic/BasicTreeUI.java
	(getPathForRow): Added check to prevent NPE.
	(getRowCount): Likewise.
	(getRowForPath): Likewise.
	(getPreferredSize): Adjusted width depending on x location and
	icon.
	(paintRecursive): Likewise.
	(getPreviousNode): Added check to prevent NPE.
	(getNextVisibleNode): Likewise.

2005-10-13  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/PlainView.java
	(lineBuffer): New field used as buffer to fetch text from a
	document.
	(getLineBuffer): New method, provides access to the new field
	above.
	(modelToView): Use new lineBuffer.
	(drawSelectedText): Likewise.
	(drawUnselectedText): Likewise.
	(determineMaxLineLength): Likewise.
	(viewToModel): Likewise.
	(updateDamage): Likewise.

2005-10-13  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/JTextComponent.java
	(replaceSelection): Removed debug statement.
	* javax/swing/text/PlainView.java
	(updateDamage): Removed unnecessary repaint call.
	(damageLineRange): Trigger repaint over the whole width of the
	text component at the requested line range. Otherwise we might
	not clear deleted text.
	* javax/swing/plaf/basic/BasicTextUI.java
	(DocumentHandler.changedUpdate): Use visibleEditorRect as
	initial allocation.
	(DocumentHandler.removeUpdate): Use visibleEditorRect as
	initial allocation.
	(DocumentHandler.insertUpdate): Use visibleEditorRect as
	initial allocation.
	(getVisibleEditorRect): If component width and height values are
	invalid (==uninitialized), return a Rectangle of (0,0,0,0) instead
	of null.

2005-10-13  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/metal/MetalFileChooserUI.java
	(DirectoryComboBoxAction): new inner class,
	(FileRenderer): new inner class,
	(directoryModel): new private field.
