@@ -1,3 +1,12 @@
+2005-10-13  Lillian Angel  <langel@redhat.com>
+
+	* javax/swing/plaf/basic/BasicTreeUI.java
+	(getPreferredSize): Added check to prevent NPE.
+	(mousePressed): Likewise.
+	(paintRecursive): Likewise.
+	(paintExpandedControlIcons): Likewise.
+	(paintRow): Fixed painting location of textarea.
+
 2005-10-13  Anthony Balkissoon  <abalkiss@redhat.com>
 
 	* javax/swing/text/PlainView.java:
